<resources>
    <string name="app_name">Tasty</string>
    <string name="slogan">Nothing as creative as cooking</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="sign_in">Sign in</string>
    <string name="username_or_password_is_incorrect">Username or password is incorrect!</string>
    <string name="next">Log in</string>
    <string name="my_recipes">My Recipes</string>
    <string name="explore">Explore</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_in_as_guest">Sign in as guest</string>
    <string name="timer">Timer</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="hello_blank_fragment">Hello My Fragment</string>
    <string name="user_null">Username is null</string>
    <string name="user_empty">Username cannot be empty!</string>
    <string name="enter_character">Enter at least 6 Digit username!</string>
    <string name="username_too_short">Username is too short</string>
    <string name="pass_null">Password is null</string>
    <string name="pass_empty">Password cannot be empty!</string>
    <string name="pass_too_short">Password is too short</string>
    <string name="pass_character">Enter at least 6 Digit Password!</string>
    <string name="guest">You\'re logged as a guest!</string>
    <string name="danger">Your data is in danger! We suggest you to login with username and password!</string>
    <string name="recipe_0">Chicken Ranch</string>
    <string name="recipe_1">Veggie &amp; Chicken Tart</string>
    <string name="recipe_2">Ice Cream</string>
    <string name="recipe_3">Eggs with Spinach</string>
    <string name="settings">Settings</string>
    <string name="new_version_available_update_now">New Version Available Update Now</string>
</resources>